--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello this is Master</h1>
+    <h1>Hello this is Mr.Rani Branch</h1>
 
 
     <script src="app.js"></script>
