--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>Hello this is Master</h1>
-=======
-    <h1>Hello this is Mr.Rani Branch</h1>
->>>>>>> Rani
-
-
+    <h1>This is an update</h1>
     <script src="app.js"></script>
 </body>
 </html>
